NULL =

iconsdir = $(datadir)/valadoc/web-assets

dist_icons_DATA = \
	style.css \
	scripts.js \
	abstractclass.svg \
	abstractmethod.svg \
	abstractproperty.svg \
	class.svg \
	coll_close.png \
	coll_open.png \
	constant.svg \
	constructor.svg \
	delegate.svg \
	enum.svg \
	enumvalue.svg \
	errorcode.svg \
	errordomain.svg \
	field.svg \
	interface.svg \
	method.svg \
	namespace.svg \
	package.svg \
	packages.svg \
	property.svg \
	signal.svg \
	staticmethod.svg \
	struct.svg \
	tip.svg \
	virtualmethod.svg \
	virtualproperty.svg \
	warning.svg \
	$(NULL)
