NULL =

iconsdir = $(datadir)/valadoc/web-assets

nobase_icons_DATA = \
	style.css \
	script.js \
	images/abstractclass.svg \
	images/abstractmethod.svg \
	images/abstractproperty.svg \
	images/class.svg \
	images/coll_close.png \
	images/coll_open.png \
	images/constant.svg \
	images/constructor.svg \
	images/delegate.svg \
	images/enum.svg \
	images/enumvalue.svg \
	images/errorcode.svg \
	images/errordomain.svg \
	images/field.svg \
	images/interface.svg \
	images/method.svg \
	images/namespace.svg \
	images/package.svg \
	images/packages.svg \
	images/property.svg \
	images/signal.svg \
	images/staticmethod.svg \
	images/struct.svg \
	images/tip.svg \
	images/virtualmethod.svg \
	images/virtualproperty.svg \
	images/warning.svg \
	$(NULL)
